在实现UserServiceImel重构为组件化架构后，实现初始化管理员和角色升降级功能，配置了 RocketMQ 日志级别控制

--- a/back_end/pm-sys/logging-service/src/main/resources/application.yml
+++ b/back_end/pm-sys/logging-service/src/main/resources/application.yml
@@ -54,6 +54,11 @@ logging:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.apache.rocketmq: INFO
+    # 关闭 RocketMQ 客户端的调试日志
+    RocketmqClient: WARN
+    com.alibaba.rocketmq: WARN
+    org.apache.rocketmq.client: WARN
+    org.apache.rocketmq.remoting: WARN
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n'
 
