--- a/back_end/pm-sys/user-service/src/main/resources/application.yml
+++ b/back_end/pm-sys/user-service/src/main/resources/application.yml
@@ -202,6 +202,12 @@ logging:
     org.apache.shardingsphere: INFO
     org.springframework.cloud.openfeign: DEBUG
     io.seata: INFO
+    # 关闭 RocketMQ 客户端的调试日志
+    org.apache.rocketmq: INFO
+    RocketmqClient: WARN
+    com.alibaba.rocketmq: WARN
+    org.apache.rocketmq.client: WARN
+    org.apache.rocketmq.remoting: WARN
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n'
 
